# gosecrets-py

./: .bumpversion.toml  .gitignore  .ruff.toml  CODE_OF_CONDUCT.md  README.md  Rakefile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test-and-lint.yml
src/gosecrets/: __init__.py  krypto.py  secrets.py  store.py
tests/: test_krypto.py  test_secrets.py
